style(icons): fix the occured overlap of items

--- a/client/src/app/components/collections/collections.component.scss
+++ b/client/src/app/components/collections/collections.component.scss
@@ -1,17 +1,15 @@
 .custom-checkbox {
   .checkbox-content {
     background: var(--img-src), rgba(0, 0, 0, 0.2);
-    background-size:cover;
+    background-size: cover;
     background-blend-mode: overlay;
-    border:3px solid red;
+    border: 3px solid #a49b9b;
     border-radius: 10px;
     display: flex;
     height: 100%;
     width: 100%;
     justify-content: space-between;
     aspect-ratio: 1 / 1;
-
-
 
     .checkbox-title {
       font-weight: 800;
@@ -48,13 +46,14 @@
       display: none;
     }
   }
-  .inner{
+  .inner {
     background-color: orangered;
     border-radius: 100%;
     height: 45px;
-    ion-icon{
-      color:white;
+    ion-icon {
+      color: white;
     }
+    z-index: 1;
   }
 }
 
